--- a/src/renderer/lib/styles/base.pcss
+++ b/src/renderer/lib/styles/base.pcss
@@ -2,6 +2,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    user-select: none;
 }
 ol,
 ul {
@@ -19,13 +20,13 @@ main {
     margin: 0;
     padding: 0;
     height: 100%;
-    line-height: 1.5;
+    /*line-height: 1.5;*/
     font: caption;
 }
 #app {
     height: 100vh;
     --titlebar-height: 3rem;
-    --toolbar-height: 5rem;
+    --toolbar-height: 3.5rem;
     --content-height: calc(
         100vh - var(--titlebar-height) - var(--toolbar-height)
     );
@@ -39,8 +40,11 @@ main {
     z-index: 500;
     /*background: rgba(255, 255, 255, 0.95);
     backdrop-filter: blur(10px);*/
-    -webkit-user-select: none;
     -webkit-app-region: drag;
+}
+
+.selectable {
+    user-select: auto;
 }
 
 /* Scrollbars */
@@ -73,7 +77,7 @@ main {
 }
 
 /* Typography */
-.txt-muted {
+/*.txt-muted {
     color: var(--textMuted);
 }
 h1 {
@@ -90,7 +94,7 @@ h4 {
 }
 h5 {
     @apply text-base font-bold;
-}
+}*/
 
 /* From & Inputs */
 input {
