Fixes with grid & popovers, + sidebar

--- a/src/renderer/lib/styles/base.pcss
+++ b/src/renderer/lib/styles/base.pcss
@@ -19,11 +19,13 @@ body,
 main {
     margin: 0;
     padding: 0;
+    width: 100%;
     height: 100%;
     /*line-height: 1.5;*/
     font: caption;
 }
 #app {
+    width: 100vw;
     height: 100vh;
     --titlebar-height: 3rem;
     --toolbar-height: 3.5rem;
@@ -116,3 +118,5 @@ ul.h-btn-list li:first-child button {
 ul.h-btn-list li:last-child button {
     @apply rounded-b-lg;
 }
+
+/* LISTS */
